k8s/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atlaz-ingress
  namespace: staging-1
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
    - host: staging.atlaz.thrillo.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: atlaz
                port:
                  number: 3013
